// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should be disabled when passed the disabled prop 1`] = `
<div>
  <button
    class="component"
    disabled=""
  />
</div>
`;

exports[`Button should render correctly 1`] = `
<div>
  <button
    class="component"
  />
</div>
`;
